- Fixed Cors error - Added User information in login response - Refreshing token pending...